2006-05-27  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-gnutls.c: (ssl_verify_certificate):
	- Fixed an error with an uninitialized value.
	- Fixes LM-35.

2006-05-26  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free),
	(connection_handle_message), (_lm_connection_failed_with_error),
	(connection_auth_reply), (connection_stream_received),
	(lm_connection_set_disconnect_function):
	- Patch from Owen Taylor fixes two reentrancy problems.
	- Fixes LM-37.

2006-04-19  Mikael Hallendal  <micke@imendio.com>

	* Release 1.1.1

	* Makefile.am: Added DISTCHECK_CONFIGURE_FLAGS
	* configure.ac: Removed old gtk-doc cruft, only use GTK_DOC_CHECK now.
	* loudmouth/Makefile.am: Added EXTRA_DIST.

2006-04-19  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	- Move back to use the GTK_DOC_CHECK() macro.
	* docs/reference/Makefile.am:
	- Updated to newer format from gtk-doc (old one failed distcheck with
	  new auto*).

2006-04-19  Mikael Hallendal  <micke@imendio.com>

	* Landing a patch by Martyn Russell for Win32.

	* configure.ac: Updated for Win32 work
	* examples/*: Updated and improved.
	* loudmouth/Makefile.am:
	* loudmouth/lm-connection.c:
	- Abstracted out the low level socket handling to lm-sock.[ch] to make
	  this file clean from OS dependant socket code.
	* loudmouth/lm-internals.h:
	* loudmouth/lm-parser.c:
	* loudmouth/lm-proxy.c:
	* loudmouth/lm-sha.c: 
	* loudmouth/lm-utils.c:
	- Win32 work
	* loudmouth/lm-sock.[ch]: 
	- Network abstraction layer.

2006-04-18  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-openssl.c: (_lm_ssl_begin):
	- Fixed an issue reported by Martyn when using non-blocking sockets.

2006-04-12  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh:
	* configure.ac:
	* configure.in:
	- Bumped the autoconf and automake requirements.
	- Added support to compile with --with-ssl=gnutls|openssl|no. The
	  default is to build against gnutls and you must explicitely tell that